--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,11 @@ body {
   color: rgb(19, 162, 228);
   text-decoration: underline;
 }
+
+.maplibregl-popup .maplibregl-popup-content { 
+  background-color: rgb(239, 255, 255);
+  border-radius: .2rem;
+}
+.pinned {
+   fill: #ff2233;
+}
