--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
-
 
 :root {
   --background: #ffffff;
@@ -20,7 +19,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Geneva, Tahoma, sans-serif;
+  font-family: Overpass, Arial, Geneva, Tahoma, sans-serif;
   line-height: 180%;
 }
 
